doc: finilize swagger UI
