# docs/swagger.json
@@ -1,8 +1,16 @@
 {
+    "schemes": [
+        "http"
+    ],
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "description": "OTP-based authentication and user management API.",
+        "title": "Dekamond Task API",
+        "contact": {},
+        "version": "1.0"
     },
+    "host": "localhost:8080",
+    "basePath": "/",
     "paths": {
         "/auth/request-otp": {
             "post": {
@@ -98,6 +106,11 @@
         },
         "/users": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "List users with optional search, pagination (requires JWT).",
                 "summary": "List users",
                 "parameters": [
@@ -135,6 +148,11 @@
         },
         "/users/{phone}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "summary": "Get user by phone",
                 "parameters": [
                     {
@@ -176,6 +194,13 @@
                     "type": "string"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
